Restructures the tutorial