@@ -1,11 +1,6 @@
-package org.streamreasoning.sld.processing.jena.tutorial.reasoning;
+package org.streamreasoning.sld.processing.jena.tutorial.solution;
 
 import org.apache.jena.graph.Graph;
-import org.apache.jena.graph.Node;
-import org.apache.jena.graph.NodeFactory;
-import org.apache.jena.graph.Triple;
-import org.apache.jena.sparql.algebra.op.OpTriple;
-import org.apache.jena.sparql.core.Var;
 import org.apache.jena.sparql.engine.binding.Binding;
 import org.apache.jena.sparql.graph.GraphFactory;
 import org.streamreasoning.polyflow.api.enums.Tick;
@@ -26,9 +21,7 @@ import org.streamreasoning.polyflow.base.operatorsimpl.s2r.HoppingWindowOpImpl;
 import org.streamreasoning.polyflow.base.processing.ContinuousProgramImpl;
 import org.streamreasoning.polyflow.base.processing.TaskImpl;
 import org.streamreasoning.sld.processing.jena.datatypes.JenaGraphOrBindings;
-import org.streamreasoning.sld.processing.jena.operatorsimpl.r2r.csprite.CSpriteR2R;
-import org.streamreasoning.sld.processing.jena.operatorsimpl.r2r.csprite.HierarchySchema;
-import org.streamreasoning.sld.processing.jena.operatorsimpl.r2r.jena.TP;
+import org.streamreasoning.sld.processing.jena.operatorsimpl.r2r.jena.FullQueryUnaryReasoning;
 import org.streamreasoning.sld.processing.jena.operatorsimpl.r2s.RelationToStreamOpImpl;
 import org.streamreasoning.sld.processing.jena.sds.SDSJena;
 import org.streamreasoning.sld.processing.jena.stream.JenaBindingStream;
@@ -38,13 +31,14 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 
-public class RedesignCSPRITESolution {
+public class JenaReasonignSolution {
 
     public static void main(String[] args) throws InterruptedException {
 
         JenaCovidStreamsGenerator generator = new JenaCovidStreamsGenerator();
 
         DataStream<Graph> inputStream = generator.getStream("http://rsp4j.io/covid/observations");
+
         // define output stream
         JenaBindingStream outStream = new JenaBindingStream("out");
 
@@ -57,17 +51,15 @@ public class RedesignCSPRITESolution {
 
         JenaGraphOrBindings emptyContent = new JenaGraphOrBindings(GraphFactory.createGraphMem());
 
-
-
-        ContinuousProgram<Graph, Graph, JenaGraphOrBindings, Binding> cp = new ContinuousProgramImpl<>();
-
-        CSpriteR2R csprite = new CSpriteR2R(Collections.singleton("http://rsp4j.io/covid/Update"), getHierarchySchema(), Collections.emptyList(), "partial_1");
         AccumulatorContentFactory<Graph, Graph, JenaGraphOrBindings> accumulatorContentFactory = new AccumulatorContentFactory<>(
-                (g) -> csprite.eval(Collections.singletonList(new JenaGraphOrBindings( g))).getContent(),
+                (g) -> g,
                 JenaGraphOrBindings::new,
                 JenaGraphOrBindings::new,
                 emptyContent
         );
+
+
+        ContinuousProgram<Graph, Graph, JenaGraphOrBindings, Binding> cp = new ContinuousProgramImpl<>();
 
         StreamToRelationOperator<Graph, Graph, JenaGraphOrBindings> s2rOp =
                 new HoppingWindowOpImpl<>(
@@ -78,17 +70,16 @@ public class RedesignCSPRITESolution {
                         report,
                         1000,
                         1000);
-
-        RelationToRelationOperator<JenaGraphOrBindings> r2rOp2 = new TP(getTriple(), List.of(s2rOp.getName()), "partial_2");
+        String schemaURI = "sensor_schema_solution.ttl"; //see the resource folder
+        // TASK: complete the schema of the used ontology
+        String query = "SELECT * WHERE {GRAPH ?g { ?s a <http://rsp4j.io/covid/Update> }}";
+        RelationToRelationOperator<JenaGraphOrBindings> r2rOp1 = new FullQueryUnaryReasoning(query, Collections.singletonList(s2rOp.getName()), "partial_1", schemaURI);
 
         RelationToStreamOperator<JenaGraphOrBindings, Binding> r2sOp = new RelationToStreamOpImpl();
 
-
-
-
         Task<Graph, Graph, JenaGraphOrBindings, Binding> task = new TaskImpl<>();
         task = task.addS2ROperator(s2rOp, inputStream)
-                .addR2ROperator(r2rOp2)
+                .addR2ROperator(r2rOp1)
                 .addR2SOperator(r2sOp)
                 .addDAG(new DAGImpl<>())
                 .addSDS(new SDSJena())
@@ -97,6 +88,7 @@ public class RedesignCSPRITESolution {
 
         List<DataStream<Graph>> inputStreams = new ArrayList<>();
         inputStreams.add(inputStream);
+
 
         List<DataStream<Binding>> outputStreams = new ArrayList<>();
         outputStreams.add(outStream);
@@ -108,26 +100,5 @@ public class RedesignCSPRITESolution {
         generator.startStreaming();
         Thread.sleep(20_000);
         generator.stopStreaming();
-    }
-
-    private static OpTriple getTriple() {
-        Node s = Var.alloc("s");
-        Node p = NodeFactory.createURI("http://www.w3.org/1999/02/22-rdf-syntax-ns#type");
-        Node o = NodeFactory.createURI(JenaCovidStreamsGenerator.PREFIX + "Update");
-        return new OpTriple(Triple.create(s, p, o));
-    }
-
-    private static HierarchySchema getHierarchySchema() {
-        HierarchySchema hierarchySchema = new HierarchySchema();
-        hierarchySchema.addSubClassOf(JenaCovidStreamsGenerator.PREFIX_SOSA + "Observation", JenaCovidStreamsGenerator.PREFIX + "Update");
-        hierarchySchema.addSubClassOf(JenaCovidStreamsGenerator.PREFIX_SIOC + "Post", JenaCovidStreamsGenerator.PREFIX + "Update");
-        hierarchySchema.addSubClassOf(JenaCovidStreamsGenerator.PREFIX + "LocationObservation", JenaCovidStreamsGenerator.PREFIX_SOSA + "Observation");
-        hierarchySchema.addSubClassOf(JenaCovidStreamsGenerator.PREFIX + "FacebookPost", JenaCovidStreamsGenerator.PREFIX_SIOC + "Post");
-        hierarchySchema.addSubClassOf(JenaCovidStreamsGenerator.PREFIX + "LowFrequencyLocationObservation", JenaCovidStreamsGenerator.PREFIX + "LocationObservation");
-        hierarchySchema.addSubClassOf(JenaCovidStreamsGenerator.PREFIX + "RFIDObservation", JenaCovidStreamsGenerator.PREFIX + "LowFrequencyLocationObservation");
-        hierarchySchema.addSubClassOf(JenaCovidStreamsGenerator.PREFIX + "HighFrequencyLocationObservation", JenaCovidStreamsGenerator.PREFIX + "LocationObservation");
-        hierarchySchema.addSubClassOf(JenaCovidStreamsGenerator.PREFIX + "BLEObservation", JenaCovidStreamsGenerator.PREFIX + "HighFrequencyLocationObservation");
-        hierarchySchema.addSubClassOf(JenaCovidStreamsGenerator.PREFIX + "GPSObservation", JenaCovidStreamsGenerator.PREFIX + "HighFrequencyLocationObservation");
-        return hierarchySchema;
     }
 }
